# CPP-programming-course

./: .gitignore  README.md
code/: '  CMakeLists.txt  compile_commands.json  kasteelruine.xml  kerkersendraken.db  logfile.txt  run.sh
code/inc/: ArmorObject.h  ConsumableObject.h  Database.h  Directions.h  Enemy.h  EnemyFactory.h  ExperiencePotionObject.h  Game.h  GameData.h  GameObject.h  GameObjectFactory.h  GoldPiecesObject.h  HealthPotionObject.h  Location.h  LocationFactory.h  LocationParser.h  Log.h  MyString.h  MyVector.h  Player.h  Random.h  String.h  TUI.h  TeleportationPotionObject.h  Vector.h  WeaponObject.h
code/src/: ArmorObject.cpp  ConsumableObject.cpp  Database.cpp  Enemy.cpp  EnemyFactory.cpp  ExperiencePotionObject.cpp  Game.cpp  GameData.cpp  GameObject.cpp  GameObjectFactory.cpp  GoldPiecesObject.cpp  HealthPotionObject.cpp  Location.cpp  LocationFactory.cpp  LocationParser.cpp  MyString.cpp  Player.cpp  String.cpp  TUI.cpp  TeleportationPotionObject.cpp  WeaponObject.cpp  main.cpp
docs/: design.puml
